tests/fail/inconfigurable.vi
pub fn main(_: &IO) {}
#[configurable] pub const foo: F32 = 1.0;
#[configurable] pub const bar: List[N32] = [1, 2, 3];
#[configurable] pub const baz[T]: T = baz;
